added ios and android platform for ionic app

--- a/timerIonicApp/ionic.config.json
+++ b/timerIonicApp/ionic.config.json
@@ -2,5 +2,7 @@
   "name": "timerIonicApp",
   "app_id": "",
   "type": "ionic-angular",
-  "integrations": {}
+  "integrations": {
+    "cordova": {}
+  }
 }
