--- a/Timer.WebApi/Timer.WebApi.csproj
+++ b/Timer.WebApi/Timer.WebApi.csproj
@@ -11,6 +11,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.0" />
+    <PackageReference Include="MJNsoft.Base.DependencyInjection" Version="1.0.0" />
   </ItemGroup>
 
   <ItemGroup>
