--- a/Timer/Timer.csproj
+++ b/Timer/Timer.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="6.1.1" />
     <PackageReference Include="MJNsoft.Base.DependencyInjection.Abstractions" Version="1.0.0" />
     <PackageReference Include="MJNsoft.Base.Services" Version="1.0.0" />
   </ItemGroup>
