--- a/Timer.WebApi/Timer.WebApi.csproj
+++ b/Timer.WebApi/Timer.WebApi.csproj
@@ -12,6 +12,9 @@
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="6.1.1" />
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.0" />
+    <PackageReference Include="MJNsoft.Base.Database" Version="1.0.0" />
+    <PackageReference Include="MJNsoft.Base.Database.LinqToDb" Version="1.0.0" />
+    <PackageReference Include="MJNsoft.Base.Database.Postgres" Version="1.0.0" />
     <PackageReference Include="MJNsoft.Base.DependencyInjection" Version="1.0.2" />
     <PackageReference Include="MJNsoft.Base.Log" Version="1.0.0" />
     <PackageReference Include="Moq" Version="4.7.137" />
