--- a/Timer.Tests/Timer.Tests.csproj
+++ b/Timer.Tests/Timer.Tests.csproj
@@ -12,7 +12,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Timer\Timer\Timer.csproj" />
+    <ProjectReference Include="..\Timer.Data\Timer.Data.csproj" />
+    <ProjectReference Include="..\Timer\Timer.csproj" />
   </ItemGroup>
 
 </Project>
