--- a/Timer.WebApi/config.json
+++ b/Timer.WebApi/config.json
@@ -7,7 +7,7 @@
         "Value": {
           "Name": "Timer",
           "ProviderName": "PostgreSQL",
-          "ConnectionString": "Server=localhost;Port=6432;Database=Timer;User Id=dba;Password=sql;Pooling=true;MinPoolSize=10;MaxPoolSize=100;"
+          "ConnectionString": "Server=postgres;Port=5432;Database=Timer;User Id=dba;Password=sql;Pooling=true;MinPoolSize=10;MaxPoolSize=100;"
         }
       }
     ]
