--- a/Timer.WebApi/Timer.WebApi.csproj
+++ b/Timer.WebApi/Timer.WebApi.csproj
@@ -27,6 +27,7 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Timer.Business\Timer.Business.csproj" />
+    <ProjectReference Include="..\Timer.Data\Timer.Data.csproj" />
   </ItemGroup>
   <ItemGroup>
     <Content Update="config.json">
